--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,5 +40,5 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
-  assets:
-    - assets/sounds/
+  # assets:
+  #   - assets/sounds/
