--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,23 @@ app.*.map.json
 key.properties
 **/*.jks
 **/*.keystore
+
+# Firebase and Google Services
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
+
+# OAuth credentials
+android/app/client_secret.json
+ios/Runner/client_secret.json
+
+# API keys and secrets
+.env
+*.env
+lib/secrets.dart
+lib/config/api_keys.dart
+
+# Google OAuth credentials
+google-services.json
+GoogleService-Info.plist
+client_secret*.json
